Stay happy and alive

--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My Site</title>
+        <title>[+]WinPhyoAung...</title>
+        <script src="https://kit.fontawesome.com/1376600d93.js" crossorigin="anonymous"></script>
         <style>
-            h1 {
-
-                background-color: skyblue;
-                colo
+            body {
+                background-color:cornflowerblue;
+                text-align: center;  
             }
+            h1 {
+                background-color: white;
+                margin-top: 30%;
+                padding: 15px;
+            }
+
         </style>
     </head>
     <body>
-        <h1>Welcome to my github site</h1>
+        <h1>How are you, guys?</h1>
+        <h2>Stay Happy and Alive</h2>
+        <i class="far fa-smile-wink fa-3x"></i> <i class="fas fa-heartbeat fa-3x"></i>
     </body>
 
 
