Stay happy and alive

--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
             }
             h1 {
                 background-color: white;
-                margin-top: 30%;
                 padding: 15px;
+            }
+            h2 {
+                padding: 15px;
+                color: white;
+            }
+
+            div{
+                margin-top: 30%;
             }
 
         </style>
     </head>
     <body>
-        <h1>How are you, guys?</h1>
-        <h2>Stay Happy and Alive</h2>
-        <i class="far fa-smile-wink fa-3x"></i> <i class="fas fa-heartbeat fa-3x"></i>
+        <div>
+            <h1>How are you, guys?</h1>
+            <h2>Stay Happy and Alive</h2>
+            <i class="far fa-smile-wink fa-3x"></i> <i class="fas fa-heartbeat fa-3x"></i>
+        </div>
     </body>
 
 
