--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <head>
         <title>[+]WinPhyoAung...</title>
         <script src="https://kit.fontawesome.com/1376600d93.js" crossorigin="anonymous"></script>
