Stay happy and alive

--- a/index.html
+++ b/index.html
@@ -2,24 +2,30 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>[+]WinPhyoAung...</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;700&display=swap" rel="stylesheet"> <title>[+]WinPhyoAung...</title>
         <script src="https://kit.fontawesome.com/1376600d93.js" crossorigin="anonymous"></script>
         <style>
             body {
                 background-color:cornflowerblue;
-                text-align: center;  
+                text-align: center;
+                font-family: 'Caveat', cursive;
             }
             h1 {
                 background-color: white;
-                padding: 15px;
+                padding: 10px;
+                color: green;
             }
             h2 {
                 padding: 15px;
-                color: white;
+                color: green;
             }
 
             div{
-                margin-top: 30%;
+                align-self: center;
+            }
+            .fas {
+                color: green;
             }
 
         </style>
@@ -27,8 +33,7 @@
     <body>
         <div>
             <h1>How are you, guys?</h1>
-            <h2>Stay Happy and Alive</h2>
-            <i class="far fa-smile-wink fa-3x"></i> <i class="fas fa-heartbeat fa-3x"></i>
+            <i class="fas fa-smile-wink fa-3x"></i> <h2>Stay happy and alive</h2> <i class="fas fa-heartbeat fa-3x"></i>
         </div>
     </body>
 
